[gd_scene format=3 uid="uid://gcrqspctwy0h"]

[ext_resource type="Script" uid="uid://fcjmiakag0i1" path="res://debris/asteroid_debris/asteroid_debris.gd" id="1_hkpkn"]
[ext_resource type="Texture2D" uid="uid://de8bjw0ohp4n6" path="res://debris/asteroid_debris/assets/asteroid_left_debris.png" id="2_lql24"]
[ext_resource type="Texture2D" uid="uid://dtmh73gay75kr" path="res://debris/asteroid_debris/assets/asteroid_right_debris.png" id="3_hkpkn"]
[ext_resource type="Script" uid="uid://bh5hqmbepj133" path="res://components/hurtbox_component.gd" id="3_kq5fu"]
[ext_resource type="Texture2D" uid="uid://bu0m6tpqge754" path="res://assets/explosion.png" id="4_byv41"]
[ext_resource type="Script" uid="uid://d33wds1kipash" path="res://components/hitbox_component.gd" id="4_hkpkn"]
[ext_resource type="Script" uid="uid://c8r28mx4wq1r5" path="res://components/health_component.gd" id="5_byv41"]
[ext_resource type="Script" uid="uid://u2k1eo6l67k3" path="res://components/drop_component.gd" id="8_byv41"]

[sub_resource type="Gradient" id="Gradient_hkpkn"]
offsets = PackedFloat32Array(0, 0.17982456, 0.3991228, 0.59429824, 1)
colors = PackedColorArray(0.38039216, 0.3254902, 0.43137255, 1, 0.6039216, 0.5254902, 0.62352943, 1, 0.9254902, 0.6666667, 0.6666667, 1, 0.38039216, 0.3254902, 0.43137255, 1, 0.25882354, 0.25882354, 0.25882354, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0caif"]
gradient = SubResource("Gradient_hkpkn")

[sub_resource type="Curve" id="Curve_byv41"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_08jhv"]
curve = SubResource("Curve_byv41")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bef8m"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 70.35
spread = 100.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 65.52
radial_accel_max = 65.52
scale_min = 4.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_08jhv")
color_ramp = SubResource("GradientTexture1D_0caif")

[sub_resource type="AtlasTexture" id="AtlasTexture_bef8m"]
atlas = ExtResource("2_lql24")
region = Rect2(0, 0, 38, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea117"]
atlas = ExtResource("2_lql24")
region = Rect2(38, 0, 38, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_byv41"]
atlas = ExtResource("3_hkpkn")
region = Rect2(0, 0, 38, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2psc"]
atlas = ExtResource("3_hkpkn")
region = Rect2(38, 0, 38, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_uole4"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yttjy"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1uju"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_juubn"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d05db"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2u3f"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3jyy"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiffj"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qylrv"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a572"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_umlm4"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g632"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcffx"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gcp4"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpogf"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eghb"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ll3"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nibsw"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhblp"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_crpcr"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf3kd"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp0aa"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6o62"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvqmy"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdv8s"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_opslv"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f18po"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_57isg"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gjn1"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iejcl"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7f05"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_alf17"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpxxk"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvutu"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jv16"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeb5o"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_34owd"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o4fa"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_81rsb"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtutr"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g71hr"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mu0o"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wgi8"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv0by"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nte05"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx222"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8u63"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6rka"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 1280, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulhvk"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1kpk"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w10i3"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gig7y"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc7vk"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_38dor"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5grvr"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_usf7h"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 1536, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_npibi"]
atlas = ExtResource("4_byv41")
region = Rect2(0, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdm62"]
atlas = ExtResource("4_byv41")
region = Rect2(256, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlgey"]
atlas = ExtResource("4_byv41")
region = Rect2(512, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_r20a7"]
atlas = ExtResource("4_byv41")
region = Rect2(768, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtwap"]
atlas = ExtResource("4_byv41")
region = Rect2(1024, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ddkn"]
atlas = ExtResource("4_byv41")
region = Rect2(1280, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2irqk"]
atlas = ExtResource("4_byv41")
region = Rect2(1536, 1792, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf1ar"]
atlas = ExtResource("4_byv41")
region = Rect2(1792, 1792, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2psc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bef8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea117")
}],
"loop": true,
"name": &"debris_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_byv41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2psc")
}],
"loop": true,
"name": &"debris_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uole4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yttjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1uju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juubn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d05db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2u3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3jyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiffj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qylrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a572")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umlm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g632")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcffx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gcp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpogf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ll3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nibsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhblp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crpcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf3kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp0aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6o62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvqmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdv8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opslv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f18po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57isg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gjn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iejcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7f05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alf17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpxxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvutu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeb5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34owd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o4fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81rsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtutr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g71hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mu0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wgi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv0by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nte05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx222")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8u63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6rka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulhvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1kpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w10i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gig7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc7vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38dor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5grvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usf7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npibi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdm62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlgey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r20a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtwap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ddkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2irqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf1ar")
}],
"loop": false,
"name": &"explode",
"speed": 60.0
}]

[sub_resource type="Animation" id="Animation_pwk4h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6277a"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.20000002, 0.40000004, 0.6, 0.8000001, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1.5720325, 1.5720325, 1.5720325, 1), Color(2.196666, 2.196666, 2.196666, 1), Color(1.5720325, 1.5720325, 1.5720325, 1), Color(2.196666, 2.196666, 2.196666, 1), Color(1.5720325, 1.5720325, 1.5720325, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3knqm"]
_data = {
&"RESET": SubResource("Animation_pwk4h"),
&"hurt": SubResource("Animation_6277a")
}

[node name="AsteroidDebris" type="RigidBody2D" unique_id=2101753760 node_paths=PackedStringArray("animated_sprite2d", "animation_player", "left_side_collision", "right_side_collision", "hitbox_component", "hurtbox_component", "health_component", "drop_component", "collision_shape_2d")]
script = ExtResource("1_hkpkn")
animated_sprite2d = NodePath("AnimatedSprite2D")
animation_player = NodePath("AnimationPlayer")
left_side_collision = NodePath("LeftSideCollision")
right_side_collision = NodePath("RightSideCollision")
hitbox_component = NodePath("HitboxComponent")
hurtbox_component = NodePath("HurtboxComponent")
health_component = NodePath("HealthComponent")
drop_component = NodePath("DropComponent")
collision_shape_2d = NodePath("LeftSideCollision")
metadata/_custom_type_script = "uid://cbbv4svga5l7m"

[node name="GPUParticles2D" type="GPUParticles2D" parent="." unique_id=1355478921]
amount = 20
process_material = SubResource("ParticleProcessMaterial_bef8m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=559153544]
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_u2psc")
animation = &"explode"

[node name="LeftSideCollision" type="CollisionPolygon2D" parent="." unique_id=2036335657]
visible = false
position = Vector2(-10, 11)
polygon = PackedVector2Array(0, 0, -30, 37, -58, -3, -42, -57, -13, -69, 31, -52)
disabled = true

[node name="RightSideCollision" type="CollisionPolygon2D" parent="." unique_id=703581087]
visible = false
position = Vector2(-10, 11)
polygon = PackedVector2Array(66, 17, 30, 43, -28, 36, 12, -30, 33, -48, 71, -20)
disabled = true

[node name="HurtboxComponent" type="Area2D" parent="." unique_id=824034814 node_paths=PackedStringArray("health_component")]
collision_layer = 6
collision_mask = 6
script = ExtResource("3_kq5fu")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://bh5hqmbepj133"

[node name="HitboxComponent" type="Area2D" parent="." unique_id=1451539524]
script = ExtResource("4_hkpkn")
damage = 1
metadata/_custom_type_script = "uid://d33wds1kipash"

[node name="HealthComponent" type="Node" parent="." unique_id=330779795]
script = ExtResource("5_byv41")
max_health = 2.0
metadata/_custom_type_script = "uid://c8r28mx4wq1r5"

[node name="DropComponent" type="Node" parent="." unique_id=381471019]
script = ExtResource("8_byv41")
total_experience_drop = 100
metadata/_custom_type_script = "uid://u2k1eo6l67k3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1832308713]
libraries/ = SubResource("AnimationLibrary_3knqm")
speed_scale = 3.0

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_changed"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_depleted"]
